system.properties added to configure Heroku deploy